doc: add create_cart check order api
