# backend/api/cart/v1/openapi.yaml
@@ -85,6 +85,78 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /v1/cart/create:
+        post:
+            tags:
+                - CartService
+            operationId: CartService_CreateCart
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateCartReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateCartResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/cart/item/check:
+        post:
+            tags:
+                - CartService
+            operationId: CartService_CheckCartItem
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CheckCartItemReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CheckCartItemResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/cart/item/uncheck:
+        post:
+            tags:
+                - CartService
+            operationId: CartService_UncheckCartItem
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UncheckCartItemReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UncheckCartItemResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /v1/cart/item/{product_id}:
         delete:
             tags:
@@ -119,6 +191,53 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /v1/cart/list:
+        get:
+            tags:
+                - CartService
+            operationId: CartService_ListCarts
+            parameters:
+                - name: owner
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListCartsResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/cart/order:
+        post:
+            tags:
+                - CartService
+            operationId: CartService_CreateOrder
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateOrderReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateOrderResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
         Cart:
@@ -142,7 +261,57 @@ components:
                 quantity:
                     type: integer
                     format: int32
+                selected:
+                    type: boolean
             description: 购物车商品
+        CheckCartItemReq:
+            type: object
+            properties:
+                owner:
+                    type: string
+                name:
+                    type: string
+                product_id:
+                    type: integer
+                    format: uint32
+            description: 选中购物车商品
+        CheckCartItemResp:
+            type: object
+            properties:
+                success:
+                    type: boolean
+        CreateCartReq:
+            type: object
+            properties:
+                owner:
+                    type: string
+                name:
+                    type: string
+            description: 新建购物车
+        CreateCartResp:
+            type: object
+            properties:
+                success:
+                    type: boolean
+                message:
+                    type: string
+        CreateOrderReq:
+            type: object
+            properties:
+                owner:
+                    type: string
+                name:
+                    type: string
+            description: 创建订单
+        CreateOrderResp:
+            type: object
+            properties:
+                success:
+                    type: boolean
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/CartItem'
         EmptyCartResp:
             type: object
             properties:
@@ -161,6 +330,13 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ListCartsResp:
+            type: object
+            properties:
+                carts:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Cart'
         RemoveCartItemResp:
             type: object
             properties:
@@ -182,6 +358,22 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UncheckCartItemReq:
+            type: object
+            properties:
+                owner:
+                    type: string
+                name:
+                    type: string
+                product_id:
+                    type: integer
+                    format: uint32
+            description: 取消选中购物车商品
+        UncheckCartItemResp:
+            type: object
+            properties:
+                success:
+                    type: boolean
         UpsertItemReq:
             type: object
             properties:
